# PyNexus

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  demo.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml
pynexus/: __init__.py  advanced_math.py  advanced_plots.py  analysis.py  astronomy.py  benchmark.py  biology.py  chemistry.py  cli.py  computational_biology.py  computational_chemistry.py  computational_economics.py  computational_engineering.py  computational_finance.py  computational_mathematics.py  computational_physics.py  computational_science.py  core.py  data_processing.py  economics.py  engineering.py  environmental.py  finance.py  geoscience.py  interdisciplinary.py  linguistics.py  materials.py  mathematics.py  medicine.py  meteorology.py  ml.py  neuroscience.py  numerics.py  oceanography.py  optimization.py  physics.py  psychology.py  signal_processing.py  social_sciences.py  solver.py  (+2 more)
pynexus/utils/: __init__.py  cache.py  lazy.py  profile.py
tests/: __init__.py  test_analysis.py  test_core.py  test_solver.py  test_utils.py  test_visualization.py
