[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pynexus"
version = "0.2.0"
description = "A universal scientific analytics library"
readme = "README.md"
authors = [
    {name = "Andriy Budilnikov", email = "andriy.budilnikov@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "scipy>=1.7.0",
    "sympy>=1.8",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "isort",
    "flake8",
    "pre-commit",
    "sphinx",
    "sphinx-rtd-theme",
]
benchmark = [
    "dask",
    "numba",
]

[project.scripts]
pynexus = "pynexus.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pynexus*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"